kubernetes/apps/platform/loki-config/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: loki
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.lab.ryantaylor.tech`)
      kind: Rule
      services:
        - name: loki
          port: 3100
  tls: {}
